# clients

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
conformance/: README.md  esm-check.mjs  make-vectors.php  resolve-test.cjs  resolve-test.php  resolve-test.py  run.cjs  run.php  run.py
conformance/vectors/: bad-alg.json  tampered-payto.json  unsigned.json  valid.json  wrong-key.json
js/: CHANGELOG.md  README.md  package.json
js/src/: index.d.ts  index.js  index.mjs
php/: CHANGELOG.md  README.md  composer.json
php/src/Nais/: Resolver.php
python/: CHANGELOG.md  README.md  pyproject.toml
python/nais_sdk/: __init__.py
